edit my index to view my resume

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <a href="https://www.linkedin.com/in/abdelrahman-ashraf-8ba548199"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/abdelrahman112345"><i class="fab fa-github"></i></a>
                     </div>
-                    <a class="btn" href="" download>Download CV</a>
+                    <a class="btn" href="./imgs/Abdelrahman Ashraf - Junior Front-end developer.pdf" download>Download CV</a>
                 </div>
                 <div class="col-md-6 contact_right">
                     <form>
